2013-04-24  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: patched the code of tagente_datos purge to have n chunks, 
	and in each chunk run a DELETE of only 1000 records at a time (with a LIMIT), 
	adding a 0,0001 second usleep() there, gives time to MySQL to put other 
	operations between, and locks doesn't appear to be a problem anymore. This
	should solve many problems detected in the past.

2013-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Merged the braa_retries option from trunk.

2013-04-18  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Added a usleep() inside loops to aliviate
	SQL transactions. This should help to improve performance and
	avoid lockings.

2013-04-08  Hirofumi Kosaka <kosaka@rworks.jp>

        * util/tentacle_serverd: Tiny improvement. Changed to use
	target process id to check if the process is actually stopped.

	Merged from trunk.

2013-04-08  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: Fixed wrong permission of tentacle_server
        for BSD.

	Merged from trunk.

2013-04-08  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_server: Small improvement. Pinned target
	process id to be killed when stopping Pandora Server, to avoid
	to kill other processes that could be invoked in different
	session by chance.   Merged from trunk.

2013-04-04  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: As the same as Linux, changed cron setting
	of maintenance process for BSD to hourly.

	Merged from trunk.

2013-04-01  Sancho Lerena <slerena@artica.es>

	* DEBIAN/postinst,
	pandora_server.redhat.spec,
	pandora_server.spec,
	pandora_server_installer: Moved maintance process to hourly
	instead daily. Improves performance and avoid locks on heavy 
	loaded systems.

2013-03-25 Hirofumi Kosaka <kosaka@rworks.jp>

	* pandora_server_installer: Fixed false recognition of RHEL6.4
	(it had been recoginzed as Ubuntu incorrecty because of its